src/FinancialForce Accounting/objects/BudgetsAndBalancesSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Balance Settings (FF)</description>
    <fields>
        <fullName>BalanceUpdateBatchSize__c</fullName>
        <label>Balance Update Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceUpdateThreshold__c</fullName>
        <label>Balance Update Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisableActualPeriodValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Actual Period Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeZeroBalances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Zero Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportingBalanceUpdateBatchSize__c</fullName>
        <label>Reporting Balance Update Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingBalanceUpdateThreshold__c</fullName>
        <label>Reporting Balance Update Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Balance Settings (FF)</label>
</CustomObject>